--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Loans/Common/LoanCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Loans/Common/LoanCard.razor
@@ -25,7 +25,7 @@
 
                 }
 
-               <SideBarDivider Name="Detalles"/>
+               <SidebarSectionDivider Name="Detalles"/>
 
                 <div class="w-full flex items-center gap-2">
             
