--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Skeletons/GenreSkeleton.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Skeletons/GenreSkeleton.razor
@@ -1,6 +1,6 @@
 @for (int i = 0; i < Count; i++)
 {
-            <LumexSkeleton Class="h-3 w-4/5 rounded-lg" />
+            <LumexSkeleton Class="h-[20px] w-[50px] rounded-lg" />
 
       
        
