--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -72,3 +72,4 @@
 @inject IGenresApiSevices GenresApiServices
 @inject IAuthorsApiServices AuthorsApiServices;
 @inject IBooksApiServices BooksApiServices
+@inject IDialogService DialogService
