--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/BooksPage.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/BooksPage.razor
@@ -9,23 +9,20 @@
             <div class="flex w-full items-center gap-2 justify-between">
                 <h2 class="text-3xl font-semibold">Libros</h2>
 
-                <div class="flex items-center gap-2 ">
+                <div class="flex items-center gap-4 ">
                     <GenresDropdown>
-                    <IconButton TooltipText="Ver géneros">
-                        
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-tag-icon lucide-tag"><path d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"/><circle cx="7.5" cy="7.5" r=".5" fill="currentColor"/></svg>       
-                        </IconButton>
+                        <LumexTooltip ShowArrow="true" Size="Size.Small" Content=@("Géneros literarios")>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-tag-icon lucide-tag"><path d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"/><circle cx="7.5" cy="7.5" r=".5" fill="currentColor"/></svg>
+                        </LumexTooltip>
                     </GenresDropdown>
                     <AuthorsDropdown>
-                        <IconButton TooltipText="Ver Autores">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-type-icon lucide-type"><path d="M12 4v16"/><path d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"/><path d="M9 20h6"/></svg>           
-                        </IconButton>
+                        
+                        <LumexTooltip ShowArrow="true" Size="Size.Small" Content=@("Autores")>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pen-tool-icon lucide-pen-tool"><path d="M15.707 21.293a1 1 0 0 1-1.414 0l-1.586-1.586a1 1 0 0 1 0-1.414l5.586-5.586a1 1 0 0 1 1.414 0l1.586 1.586a1 1 0 0 1 0 1.414z"/><path d="m18 13-1.375-6.874a1 1 0 0 0-.746-.776L3.235 2.028a1 1 0 0 0-1.207 1.207L5.35 15.879a1 1 0 0 0 .776.746L13 18"/><path d="m2.3 2.3 7.286 7.286"/><circle cx="11" cy="11" r="2"/></svg>
+
+                        </LumexTooltip>
                     </AuthorsDropdown>
-                    <LumexTooltip Content="@("hola")" >
-                        <LumexButton Class="hidden" >
-                            click
-                        </LumexButton>
-                    </LumexTooltip>
+                  
                    
                 </div>
             </div>
