[feature]:delete and update authors feature done

--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/DialogHost.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/DialogHost.razor
@@ -2,10 +2,10 @@
 @if (DialogService.IsOpen)
 {
     <Animate Animation="Animations.FadeIn">
-        <div class="absolute inset-0 z-[99999] bg-white/70 border border-neutral-200 flex justify-center items-center">
-            <div class="bg-white p-6 rounded-xl shadow-xl w-[350px] flex flex-col gap-4">
-                <h2 class="text-lg font-semibold text-center">@DialogService.Title</h2>
-                <p class="text-sm text-center text-gray-600">@DialogService.Body</p>
+        <div @onclick="@(DialogService.Cancel)" class="fixed inset-0 z-[99999] bg-white/70  flex justify-center items-center">
+            <div class="bg-white p-6 rounded-lg  border border-neutral-200 w-[350px] flex flex-col gap-4">
+                <h2 class="text-md font-semibold text-center">@DialogService.Title</h2>
+                <p class="text-[13px] text-center opacity-80">@DialogService.Body</p>
 
                 @if (DialogService.ChildContent is not null)
                 {
@@ -21,6 +21,7 @@
                     </LumexButton>
 
                     <LumexButton Color="DialogService.AcceptColor"
+                                 Class="w-full"
                                  @onclick="DialogService.Accept">
                         @DialogService.AcceptText
                     </LumexButton>
