--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorsContainer.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorsContainer.razor
@@ -1,4 +1,3 @@
-@using BibliotecaUteco.Client.Responses
 <div class="flex flex-col p-2 gap-2 w-[300px] max-h-[500px] overflow-y-auto ">
     
     @if (ShowCreateAuthorModal)
@@ -17,9 +16,24 @@
        
         
     }
+    else if (ShowUpdateAuthorModal && SelectedAuthor is not null)
+    {
+        <AuthorizeView Roles="Admin">
+            <Authorized>
+                <div class="w-full flex items-center justify-between mb-4">
+                    <label class="text-lg font-semibold">Actualizar Autor</label>
+                    <IconButton Small="true" OnClick="() => { ShowUpdateAuthorModal = false; SelectedAuthor = null; }" TooltipText="Cancelar">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x-icon lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+                    </IconButton>
+                </div>
+                <UpdateAuthorForm OnAuthorUpdated="HandleOnAuthorUpdated" Author="SelectedAuthor"/>
+            </Authorized>
+        </AuthorizeView>
+    }
     else
     {
-        <div class="flex w-full gap-2 items-end">
+        <div class="flex w-full gap-3 flex-col">
+            <label class="text-[15px] font-semibold ">Administrar Autores</label>
 
         <EditForm class="w-full flex items-end gap-2" Model="@GetAuthorsByName" OnValidSubmit="FetchGetAuthorsByNameAsync">
             <DataAnnotationsValidator></DataAnnotationsValidator>
@@ -30,10 +44,11 @@
                             LabelPlacement="@LabelPlacement.Outside"
                             Disabled="@_fetchingAuthors"
                             Clearable="@true"
+                            Size="Size.Small"
                             Behavior="InputBehavior.OnInput"
                             OnCleared="async()=>{await FetchGetAuthorsByNameAsync();}"
             />
-            <LumexButton Type="ButtonType.Submit" Disabled="@_fetchingAuthors" Color="ThemeColor.Primary" >
+            <LumexButton Size="Size.Small" Type="ButtonType.Submit" Disabled="@_fetchingAuthors" Color="ThemeColor.Primary" >
                 Buscar
             </LumexButton>
         </EditForm>
@@ -62,7 +77,7 @@
         {
             foreach(var author in Authors)
             {
-                <AuthorCard OnRemove="HandleRemoveClicked" OnClicked="HandleAuthorClicked" Author="author"/>
+                <AuthorCard OnUpdate="HandleOnUpdateAuthor" OnClicked="HandleAuthorClicked" Author="author"/>
             }
         }
         else
@@ -90,11 +105,12 @@
     public GetAuthorsByNameRequest GetAuthorsByName {get; set;} = new();
 
     public bool ShowCreateAuthorModal { get; set; } = false;
+    public bool ShowUpdateAuthorModal {get; set;} = false;
+    public AuthorResponse? SelectedAuthor { get; set; } = null;
 
     [Parameter]
     public EventCallback<AuthorResponse> OnAuthorClicked {get; set;}
-    [Parameter]
-    public EventCallback<AuthorResponse> OnAuthorRemoved {get; set;}
+    
 
     
 }
@@ -138,8 +154,25 @@
         await OnAuthorClicked.InvokeAsync(author);
     }
 
-    public async Task HandleRemoveClicked(AuthorResponse author){
-
-        await OnAuthorRemoved.InvokeAsync(author);
+    public void HandleOnUpdateAuthor(AuthorResponse au)
+    {
+        SelectedAuthor = au;
+        ShowUpdateAuthorModal = true;
     }
+
+    public void HandleOnAuthorUpdated(AuthorResponse au)
+    {
+        var author = Authors.FirstOrDefault(a => a.Id == au.Id);
+
+        if (author is null) return;
+
+        var index = Authors.IndexOf(author);
+
+        if (index < 0) return;
+
+        Authors[index] = au;
+    }
+    
+
+   
 }
