--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Forms/CreateBookForm.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Forms/CreateBookForm.razor
@@ -176,7 +176,7 @@
     public string? BookCoverPrview { get; set; } = null;
 
    
-    private InputFile? fileInput;
+    private InputFile? fileInput = null;
     
 
 }
@@ -279,6 +279,8 @@
     
     private async Task TriggerFileInput()
     {
+        if (fileInput is null) return;
+        
         await JsRuntime.InvokeVoidAsync("triggerClick", fileInput.Element);
     }
 
