--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Forms/UpdateGenreForm.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Forms/UpdateGenreForm.razor
@@ -7,7 +7,7 @@
                       Label="Nombre del género literario"
                       Placeholder="Ej. Misterio"
                     Behavior="InputBehavior.OnInput"
-                      LabelPlacement="@LabelPlacement.Outside"
+                      LabelPlacement="@LabelPlacement.Inside"
                       Required="true"
                       Disabled="_updatingGenre"
                         Description="Los generos literarios no pueden estar repetidos. Deben de tener maximo 25 caracteres."
