[bugs]: bugs arreglados

--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Views/AuthorsDropdown.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Views/AuthorsDropdown.razor
@@ -1,6 +1,6 @@
 <LumexPopover Shadow="Shadow.Large" Placement="PopoverPlacement.BottomStart" ShowArrow="true" >
     <LumexPopoverTrigger>
-        <button class="w-full">
+        <button class="w-full" type="button">
            @if (ChildContent is not null)
            {
                @(ChildContent)
