--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Views/GenresDropdown.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Genres/Views/GenresDropdown.razor
@@ -1,6 +1,6 @@
 <LumexPopover Shadow="Shadow.Large" Placement="PopoverPlacement.BottomStart" ShowArrow="true" >
     <LumexPopoverTrigger>
-        <button>
+        <button type="button">
           @if(ChildContent is not null){@(ChildContent)}
   
         </button>
