--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/RightBar.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/RightBar.razor
@@ -10,6 +10,8 @@
             RightBarView.BookDetails => "Acerca del libro",
             RightBarView.Users => "Administrar Usuarios",
             RightBarView.UpdateUser => "Actualizar Usuario",
+            RightBarView.CreateUser => "Crear Usuario",
+
 
 
 
