--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Views/BookDetails.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Views/BookDetails.razor
@@ -23,7 +23,7 @@
         <div class="flex flex-col gap-1">
             @foreach(var author in Book.Authors.Select(x => x.Author))
             {
-                <AuthorCard ShowBooksCount="false" ShowRemoveButton="false" Author="author"/>
+                <AuthorCard HideActions="true" ShowBooksCount="false" ShowRemoveButton="false" Author="author"/>
             }
         </div>
         <SidebarSectionDivider Name="Géneros literarios"/>
