--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Readers/Common/ReaderCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Readers/Common/ReaderCard.razor
@@ -1,14 +1,45 @@
+@using BibliotecaUteco.Client.Utilities
 <div class="w-full  rounded-lg  bg-neutral-5 hover:bg-neutral-100 flex  gap-3 p-3  ">
-    <LumexAvatar Name="Jose Manuel"  Color="ThemeColor.Primary" Size="Size.Small" Class=" !shrink-0" />
+    <LumexAvatar Name="@Reader.FullName"  Color="RandomColorHelper.GetRandomColor()" Size="Size.Small" Class=" !shrink-0" />
     
     <div class="w-full flex flex-col">
-        <label class="text-[16px] font-semibold opacity-80 text-black ">Jose Manuel Lopez</label>
-        <label class="text-[13px] font-normal text-black">2020-0333</label>
+        <label class="text-[16px] font-semibold opacity-80 text-black ">@Reader.FullName</label>
         
-        <SidebarSectionDivider Name="Detalles"/>
+       
+        @if (!string.IsNullOrEmpty(Reader.IdentityCardNumber))
+        {
+            <label class="text-[13px] font-normal text-black">Cédula: @Reader.IdentityCardNumber</label>
+
+        }
+        <SidebarSectionDivider Name="Información básica"/>
+       
         
-        <label class="text-[13px] font-normal  "><strong>Ultimo Prestamo:</strong> 23 oct 2025 (Activo)</label>
-        <label class="text-[13px] font-normal "><strong>Prestamos pedidos:</strong> 2</label>
+        <label class="text-[13px] font-normal text-black"><strong>Matrícula: </strong>
+            @if (!string.IsNullOrEmpty(Reader.StudentLicence))
+             {
+                 @Reader.StudentLicence
+             }
+            else
+            {
+                @(" -------")
+            }</label>
+        <label class="text-[13px] font-normal text-black"><strong>Vivienda:</strong> @Reader.Address</label>
+        <label class="text-[13px] font-normal text-black"><strong>No. Teléfono:</strong> @Reader.FormattedPhoneNumber</label>
+
+        
+        <SidebarSectionDivider Name="Detalles de préstamos"/>
+        
+        <label class="text-[13px] font-normal  "><strong>Ultimo Prestamo:</strong> 
+            @if (Reader.LastLoanDate is not null)
+            {
+                @Reader.LastLoanDate.Value.ToLocalTime().ToString("dd MMM yyyy", new System.Globalization.CultureInfo("es-ES")) @(Reader.LastLoanIsActive ? "(Activo)" : "(Devuelto)")
+            }
+            else
+            {
+                @("---")
+            }
+        </label>
+        <label class="text-[13px] font-normal "><strong>Prestamos pedidos:</strong> @Reader.LoansCount</label>
     </div>
     
     <EllipsisVerticalIcon Size="18px" class="cursor-pointer"/>
@@ -18,3 +49,10 @@
    
     
 </div>
+
+@code{
+
+    [Parameter]
+    public ReaderResponse Reader { get; set; } = new();
+
+}
